deployments/main-api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-api
  namespace: main-api
  labels:
    app: main-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: main-api
